--- a/banktobank.html
+++ b/banktobank.html
@@ -1,6 +1,8 @@
 ---
 layout: default
-title: ICEPR'16 - Bank to Bank Transfer
+title: ICEPR'17 - Bank to Bank Transfer
+meta: Bank to bank information
+keyword: environment conference, biofuels conference, desalination conference, wastewater conference, pollution conference, remediation conference, environmental engineering conference, environmental pollution conference, environmental remediation conference, environmental treatment conference, air pollution conference, water pollution conference, wasterwater pollution conference, soil pollution conference, environmental protection, environmental sustainability, environmental development, greenhouse, global warming, climate change, groudwater, oil spills, renewable energy, water treatment, soil treatment, wastewater treatment, environment, biofuels, desalination, wastewater, pollution, remediation, environmental engineering, environmental pollution, environmental remediation, environmental treatment, air pollution, water pollution, wasterwater pollution, soil pollution, environmental protection conference, environmental sustainability conference, environmental development conference, greenhouse conference, global warming conference, climate change conference, groudwater conference, oil spills conference, renewable energy conference, water treatment conference, soil treatment conference, wastewater treatment conference
 ---
 
 <div class="unit unit-s-1 unit-m-1-4-1 unit-l-1-4-1">
@@ -19,12 +21,14 @@ title: ICEPR'16 - Bank to Bank Transfer
     K1H 7Y3<br>
     <b>Phone #:</b> +1-613-695-3040<br>
 <br>
-    <b>Account #:</b> 036001 3152773<br>
-    <b>Swift Code:</b> TDOMCATTTOR<br>
+    <b>Account #:</b> 23077000000726<br>
+    <b>Swift Code:</b> NOSCCATTFCA<br>
+    <b>Transit:</b> 23077<br>
     <b>Address:</b><br>
-    TD Canada Trust<br>
-    2470 Bank Street<br>
-    Ottawa, Ontario, Canada<br>
-    K1V 8S2</p>
+    Scotia Bank Canada<br>
+    20 Queen St. West, 4th floor<br>
+    Toronto, Ontario, Canada<br>
+    M5H 3R3<br>
+    <b>Phone #:</b> 888-855-1234</p>
   </div>
 </div>
