--- a/dates.html
+++ b/dates.html
@@ -1,11 +1,13 @@
 ---
 layout: default
-title: ICEPR'16 - Important Dates
+title: ICEPR'17 - Important Dates
+meta: The important dates of ICEPR
+keyword: environment conference, biofuels conference, desalination conference, wastewater conference, pollution conference, remediation conference, environmental engineering conference, environmental pollution conference, environmental remediation conference, environmental treatment conference, air pollution conference, water pollution conference, wasterwater pollution conference, soil pollution conference, environmental protection, environmental sustainability, environmental development, greenhouse, global warming, climate change, groudwater, oil spills, renewable energy, water treatment, soil treatment, wastewater treatment, environment, biofuels, desalination, wastewater, pollution, remediation, environmental engineering, environmental pollution, environmental remediation, environmental treatment, air pollution, water pollution, wasterwater pollution, soil pollution, environmental protection conference, environmental sustainability conference, environmental development conference, greenhouse conference, global warming conference, climate change conference, groudwater conference, oil spills conference, renewable energy conference, water treatment conference, soil treatment conference, wastewater treatment conference
 ---
 
 <div class="unit unit-s-1 unit-m-1-4-1 unit-l-1-4-1">
   <div class="unit-spacer content">
-    <p class="body">The important dates and deadlines for the 6<sup>th</sup> International Conference on Environmental Pollution and Remediation (ICEPR'16) are as follows:</p>
+    <p class="body">The important dates and deadlines for the 7<sup>th</sup> International Conference on Environmental Pollution and Remediation (ICEPR'17) are as follows:</p>
 
 <div class="mobile">
     <table>
@@ -13,37 +15,37 @@ title: ICEPR'16 - Important Dates
     <td class="date-title">Conference Dates</td>
     </tr>
     <tr>
-        <td class="imp-date">August 19 - 20, 2016</td>
+        <td class="imp-date">June 7 - 8, 2017</td>
     </tr>
     <tr>
-    <td class="date-title">Paper Submission Deadline</td>
+    <td class="date-title">Paper Submission Deadline<!-- </s><br><div class="past-text">Extended Paper Submission Deadline</div> --></td>
     </tr>
     <tr>
-        <td class="imp-date">February 1, 2016</td>
+        <td class="imp-date">November 1, 2016<!-- </s><br><b>May 1, 2016</b> --></td>
     </tr>
     <tr>
-    <td class="date-title">Notification of Authors</td>
+    <td class="date-title">Notification of Authors<!-- </s><br><div class="past-text">Extended Notification of Authors</div> --></td>
     </tr>
     <tr>
-    <td class="imp-date">March 1, 2016</td>
+    <td class="imp-date">January 15, 2017<!-- </s><br><b>May 15, 2016</b> --></td>
     </tr>
     <tr>
-    <td class="date-title">Camera Ready Submission Deadline</td>
+    <td class="date-title">Final Version of Extended Abstract or Paper Submission Deadline<!-- </s><br><div class="past-text">Extended Final Version of Extended Abstract or Paper Submission Deadline</div> --></td>
     </tr>
     <tr>
-    <td class="imp-date">April 1, 2016</td>
+    <td class="imp-date">February 1, 2017<!-- </s><br><b>May 25, 2016</b> --></td>
     </tr>
     <tr>
     <td class="date-title" rowspan="3">Registration Deadline</td>
     </tr>
     <tr>
-    <td class="reg">Early Bird Registration <p class="body">April 1, 2016</p></td>
+    <td class="reg">Early Bird Registration<!-- </s><br><div class="past-text">Extended Early Bird Registration</div> --><br><p class="body">February 1, 2017<!-- </s><br><b>June 1, 2016</b> --></p></td>
     </tr>
     <tr>
-        <td class="reg">Regular Registration* <p class="body">May 1, 2016</p></td>
+        <td class="reg">Regular Registration*<!-- </s><br><div class="past-text">Extended Regular Registration*</div> --><br><p class="body">March 15, 2017<!-- </s><br><b>July 1, 2016</b> --></p></td>
     </tr>
     <tr>
-        <td class="reg">Late Registration <p class="body">After May 1, 2016</p></td>
+        <td class="reg">Late Registration <p class="body">After March 15, 2017</p></td>
     </tr>
 </table>
 </div>
@@ -52,29 +54,29 @@ title: ICEPR'16 - Important Dates
     <table>
     <tr>
     <td class="date-title">Conference Dates</td>
-    <td class="imp-date">August 19 - 20, 2016</td>
+    <td class="imp-date">June 7 - 8, 2017</td>
 </tr>
     <tr>
-    <td class="date-title">Paper Submission Deadline</td>
-        <td class="imp-date">February 1, 2016</td>
+        <td class="date-title">Paper Submission Deadline<!-- </s><br><div class="past-text">Extended Paper Submission Deadline</div> --></td>
+        <td class="imp-date">November 1, 2016<!-- </s><Br><b>May 1, 2016</b> --></td>
     </tr>
     <tr>
-    <td class="date-title">Notification of Authors</td>
-    <td class="imp-date">March 1, 2016</td>
-</tr>
+        <td class="date-title">Notification of Authors<!-- </s><br><div class="past-text">Extended Notification of Authors</div> --></td>
+        <td class="imp-date">January 15, 2017<!-- </s><br><b>May 15, 2016</b> --></td>
+    </tr>
     <tr>
-    <td class="date-title">Camera Ready Submission Deadline
-    <td class="imp-date">April 1, 2016</td>
+    <td class="date-title">Final Version of Extended Abstract or Paper Submission Deadline<!-- </s><br><div class="past-text">Extended Final Version of Extended Abstract or Paper Submission Deadline</div> --></td>
+    <td class="imp-date">February 1, 2017<!-- </s><Br><b>May 25, 2016</b> --></td>
 </tr>
 <tr>
     <th class="date-title" rowspan=3>Registration Deadline</th>
-    <td class="reg">Early Bird Registration <br><p class="body">April 1, 2016</p></td>
+    <td class="reg">Early Bird Registration<!-- </s><br><div class="past-text">Extended Early Bird Registration</div> --><p class="body">February 1, 2017<!-- </s><br><b>June 1, 2016</b> --></p></td>
 </tr>
 <tr>
-        <td class="reg">Regular Registration* <br><p class="body">May 1, 2016</p></td>
+        <td class="reg">Regular Registration*<!-- </s><br><div class="past-text">Extended Regular Registration*</div> --><p class="body">March 15, 2017<!-- </s><br><b>July 1, 2016</b> --></p></td>
     </tr>
     <tr>
-        <td class="reg">Late Registration <br><p class="body">After May 1, 2016</p></td>
+        <td class="reg">Late Registration <br><p class="body">After March 15, 2017</p></td>
     </tr>
 </table>
 </div>
