--- a/payment_successful.html
+++ b/payment_successful.html
@@ -1,13 +1,15 @@
 ---
 layout: default
-title: ICEPR'16 - PayPal Payment Successful
+title: ICEPR'17 - PayPal Payment Successful
+meta: Payment Successful!
+keyword: environment conference, biofuels conference, desalination conference, wastewater conference, pollution conference, remediation conference, environmental engineering conference, environmental pollution conference, environmental remediation conference, environmental treatment conference, air pollution conference, water pollution conference, wasterwater pollution conference, soil pollution conference, environmental protection, environmental sustainability, environmental development, greenhouse, global warming, climate change, groudwater, oil spills, renewable energy, water treatment, soil treatment, wastewater treatment, environment, biofuels, desalination, wastewater, pollution, remediation, environmental engineering, environmental pollution, environmental remediation, environmental treatment, air pollution, water pollution, wasterwater pollution, soil pollution, environmental protection conference, environmental sustainability conference, environmental development conference, greenhouse conference, global warming conference, climate change conference, groudwater conference, oil spills conference, renewable energy conference, water treatment conference, soil treatment conference, wastewater treatment conference
 ---
 
 <div class="unit unit-s-1 unit-m-1-4-1 unit-l-1-4-1">
   <div class="unit-spacer content">
     <p class="body">Your payment has been successful!</p>
 
-    <p align="body">We thank you very much for registering for ICEPR'16. An email has been sent to you confirming your payment to ICEPR'16. Please keep this email for your reference.</p>
+    <p align="body">We thank you very much for registering for ICEPR'17. An email has been sent to you confirming your payment to ICEPR'17. Please keep this email for your reference.</p>
 
     <p align="body">Please make sure you <strong>fill out and submit the registration form</strong>. Failing to fill out this form will result in the elimination of your registration.</p>
 
@@ -19,6 +21,6 @@ title: ICEPR'16 - PayPal Payment Successful
 
     <center><a href="mailto:registration@icepr.org" class="body-link">registration@icepr.org</a></p>
 
-    <p class="body">We are looking forward to seeing you at ICEPR'16!</p>
+    <p class="body">We are looking forward to seeing you at ICEPR'17!</p>
   </div>
 </div>
