--- a/symposium.html
+++ b/symposium.html
@@ -1,11 +1,13 @@
 ---
 layout: default
-title: ICEPR'16 - Symposium
+title: ICEPR'17 - Symposium
+meta: The symposium information for ICEPR
+keyword: environment conference, biofuels conference, desalination conference, wastewater conference, pollution conference, remediation conference, environmental engineering conference, environmental pollution conference, environmental remediation conference, environmental treatment conference, air pollution conference, water pollution conference, wasterwater pollution conference, soil pollution conference, environmental protection, environmental sustainability, environmental development, greenhouse, global warming, climate change, groudwater, oil spills, renewable energy, water treatment, soil treatment, wastewater treatment, environment, biofuels, desalination, wastewater, pollution, remediation, environmental engineering, environmental pollution, environmental remediation, environmental treatment, air pollution, water pollution, wasterwater pollution, soil pollution, environmental protection conference, environmental sustainability conference, environmental development conference, greenhouse conference, global warming conference, climate change conference, groudwater conference, oil spills conference, renewable energy conference, water treatment conference, soil treatment conference, wastewater treatment conference
 ---
 
 <div class="unit unit-s-1 unit-m-1-4-1 unit-l-1-4-1">
   <div class="unit-spacer content">
-   <p class="body">The 6<sup>th</sup> International Conference on Environmental Pollution and Remediation (ICEPR'16) invites you to propose a symposium.</p>
+   <p class="body">The 7<sup>th</sup> International Conference on Environmental Pollution and Remediation (ICEPR'17) invites you to propose a symposium.</p>
 
    <p class="body">The proposed symposium, if accepted, will be co-located with and under the umbrella of the conference.</p>
 
