--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ keyword: environment conference, biofuels conference, desalination conference, w
 
 	<p class="body"><b>ICEPR</b> is an acronym for <b>I</b>nternational <b>C</b>onference on <b>E</b>nvironmental <b>P</b>ollution and <b>R</b>emediation.</p>
 
-	<p class="body">To view ICEPR 2016 website, please visit <a href="http://icepr.org" class="body-link mob-link">www.icepr.org</a></p>
+	<p class="body">To view ICEPR 2016 website, please visit <a href="http://2016.icepr.org" class="body-link mob-link">www.2016.icepr.org</a></p>
 
 	<div class="sponsor">
 	<a href="http://international-aset.com"><img src="../img/int-aset.svg" class="flex-sponsor1"></a><br>
