updated sc member

--- a/committee.html
+++ b/committee.html
@@ -26,6 +26,7 @@ keyword: environment conference, biofuels conference, desalination conference, w
     <p class="body"><b>Dr. Charles Lee, </b> The University of Newcastle, Singapore</p>
     <p class="body"><b>Dr. Jianbing Li, </b> Univeristy of Northern British Columbia, Canada</p>
     <p class="body"><b>Dr. Chuxia Lin, </b> University of Salford, UK</p>
+    <p class="body"><b>Dr. Huguette Turgeon O'Brien, </b> Laval University, Canada</p>
     <p class="body"><b>Dr. Kuang-Hui Peng, </b> National Taipei University of Technology, Taiwan</p>
     <p class="body"><b>Dr. Tomasz Płociniczak, </b> University of Silesia, Poland</p>
     <p class="body"><b>Dr. Martin Romantschuk, </b> University of Helsinki, Finland</p>
