--- a/committee.html
+++ b/committee.html
@@ -30,6 +30,7 @@ keyword: environment conference, biofuels conference, desalination conference, w
     <p class="body"><b>Dr. Kuang-Hui Peng, </b> National Taipei University of Technology, Taiwan</p>
     <p class="body"><b>Dr. Tomasz Płociniczak, </b> University of Silesia, Poland</p>
     <p class="body"><b>Dr. Martin Romantschuk, </b> University of Helsinki, Finland</p>
+    <p class="body"><b>Dr. Nora Fung Yee Tam, </b> City University of Hong Kong, Hong Kong</p>
     <p class="body"><b>Dr. Ron Thring, </b> Univeristy of Northern British Columbia, Canada</p>
     <p class="body"><b>Dr. Marek Trojanowicz, </b> University of Warsaw, Poland</p>
     <p class="body"><b>Dr. Olcay Tünay, </b> Istanbul Technical University, Turkey</p>
