--- a/committee.html
+++ b/committee.html
@@ -14,7 +14,7 @@ keyword: environment conference, biofuels conference, desalination conference, w
     <p class="body"><b>Dr. Rajasekhar Bala, </b> National University of Singapore, Singapore</p>
     <p class="body"><b>Dr. Jamal Chaouki, </b> École Polytechnique de Montreal, Canada</p>
     <p class="body"><b>Dr. Bor-Yann Chen, </b> National I-Lan University, Taiwan</p>
-    <p class="body"><b>Dr. Fabiana Corami, </b> CNR-IDPA, ItaUniversity of Ottawa, CanadaCNR-IDPA, Italy</p>
+    <p class="body"><b>Dr. Fabiana Corami, </b> CNR-IDPA, Italy</p>
     <p class="body"><b>Dr. Mamadou Fall, </b> University of Ottawa, Canada</p>
     <p class="body"><b>Dr. Anton Ficai, </b> University Politehnica of Bucharest, Romania</p>
     <p class="body"><b>Dr. Dragos Gudovan, </b> University Politehnica of Bucharest, Romania</p>
