--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@ keyword: environment conference, biofuels conference, desalination conference, w
 	<a href="http://international-aset.com"><img src="../img/int-aset.svg" class="flex-sponsor1"></a><br>
 
 	<a href="http://avestia.com"><img src="../img/avestia.png" class="flex-sponsor"></a>
+
+  <a href="http://esemag.com"><img src="../img/esemag.jpg" class="flex-sponsor"></a>
 	</div>
 
   </div>
