--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@ keyword: environment conference, biofuels conference, desalination conference, w
 	<a href="http://avestia.com"><img src="../img/avestia.png" class="flex-sponsor"></a>
 
   <a href="http://esemag.com"><img src="../img/esemag.jpg" class="flex-sponsor"></a>
+
+  <a href="http://industryarc.com/about-us.php"><img src="../img/industryarc.jpg" class="flex-sponsor"></a>
 	</div>
 
   </div>
