--- a/paypal.html
+++ b/paypal.html
@@ -7,8 +7,8 @@ keyword: environment conference, biofuels conference, desalination conference, w
 
 <div class="unit unit-s-1 unit-m-1-4-1 unit-l-1-4-1">
   <div class="unit-spacer content">
-  <p class="body">The PayPal payment method will be available shortly! We apologize for the inconvenience and thank you for your patience.</p>
-    <!-- <p class="body">Please select the proper registration type from the drop-down box and click Pay Now to proceed with the payment.</p>
+  <!-- <p class="body">The PayPal payment method will be available shortly! We apologize for the inconvenience and thank you for your patience.</p> -->
+    <p class="body">Please select the proper registration type from the drop-down box and click Pay Now to proceed with the payment.</p>
        
     <center>
     <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top" class="paypal">
@@ -16,11 +16,12 @@ keyword: environment conference, biofuels conference, desalination conference, w
 	<input type="hidden" name="hosted_button_id" value="RZT55NZ2JPUXS">
 	<table>
 	<tr><td><input type="hidden" name="on0" value="~ Select Registration Type ~">Select Registration Type</td></tr><tr><td><select name="os0">
-	<option value="Full Registration">Full Registration €575.00 EUR</option>
-	<option value="Student Registration">Student Registration €425.00 EUR</option>
-	<option value="Additional Paper">Additional Paper €120.00 EUR</option>
-	<option value="Accompanying Person">Accompanying Person €100.00 EUR</option>
-	<option value="Additional Banquet Dinner">Additional Banquet Dinner €55.00 EUR</option>
+	<option value="Full Registration">Full Registration €650.00 EUR</option>
+	<option value="Student Registration">Student Registration €450.00 EUR</option>
+	<option value="Additional Paper">Additional Paper €150.00 EUR</option>
+	<option value="Accompanying Person">Accompanying Person €150.00 EUR</option>
+	<option value="Closing Ceremony">Closing Ceremony €50.00 EUR</option>
+	<option value="NewTech Workshop">NewTech Workshop €122.00 EUR</option>
 	</select> </td></tr>
 	</table>
 	<input type="hidden" name="currency_code" value="EUR">
@@ -31,6 +32,6 @@ keyword: environment conference, biofuels conference, desalination conference, w
 
     <p class="body">If you are not able to use this method of payment, you may use our other types of payment. For more information please visit the link below:</p>
 
-   	<center><a href="../registration" class="body-link"> www.icepr.org/registration/</a></center> -->
+   	<center><a href="../registration" class="body-link"> www.icepr.org/registration/</a></center>
   </div>
 </div>
