--- a/paypal.html
+++ b/paypal.html
@@ -13,7 +13,7 @@ keyword: environment conference, biofuels conference, desalination conference, w
     <center>
     <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top" class="paypal">
 	<input type="hidden" name="cmd" value="_s-xclick">
-	<input type="hidden" name="hosted_button_id" value="RZT55NZ2JPUXS">
+	<input type="hidden" name="hosted_button_id" value="XU4UQXRPLQGYC">
 	<table>
 	<tr><td><input type="hidden" name="on0" value="~ Select Registration Type ~">Select Registration Type</td></tr><tr><td><select name="os0">
 	<option value="Full Registration">Full Registration €650.00 EUR</option>
