--- a/index.html
+++ b/index.html
@@ -24,10 +24,11 @@ keyword: environment conference, biofuels conference, desalination conference, w
       <p class="body"><b>Dr. Akira Kondo,</b><br>Osaka University, Japan<br><a href="../keynote#Dr. Akira Kondo" class="body-link">Biography & Abstract</a></p>
     </div>
 
-    <!-- <div class="unit unit-s-1-2 unit-m-1-4 unit-l-1-2 keynoteIndex">
-      <img src="../img/Schwarz.jpg" class="flex-img">
-      <p class="body"><b>Dr. Simona Schwarz,</b><br>Leibniz Institut für Polymerforschung Dresden e.V., Germany<br><a href="../keynote#Dr. Simona Schwarz" class="body-link">Biography & Abstract</a></p>
-    </div> --><br><br>
+    <div class="unit unit-s-1-2 unit-m-1-4 unit-l-1-2 keynoteIndex">
+      <img src="../img/Kueper.jpg" class="flex-img">
+      <p class="body"><b>Dr. Bernard H. Kueper,</b><br>Queen’s University, Canada<br><a href="../keynote#Dr. Bernard H. Kueper" class="body-link">Biography & Abstract</a></p>
+    </div>
+  <br><br>
   </center>
 
 	<div class="sponsor">
