--- a/keynote.html
+++ b/keynote.html
@@ -18,6 +18,13 @@ keyword: environment conference, biofuels conference, desalination conference, w
            <p class="body">Osaka University, Japan</p>
       </div>
     </div>
+
+    <div class="unit unit-s-1-1 unit-s-1-2 unit-m-1-2 unit-l-1-2">
+      <div class="unit-spacer">
+      <a href="#Dr. Bernard H. Kueper">Dr. Bernard H. Kueper</a><br>
+           <p class="body">Queen’s University, Canada</p>
+      </div>
+    </div>
     </div> <!-- End Keynotes -->
 
   <span class="anchor" id="Dr. Akira Kondo"></span>
@@ -28,6 +35,21 @@ keyword: environment conference, biofuels conference, desalination conference, w
   <p class="keynote-topic"><b>Topic of Keynote:</b> Performance of Meteorological and Air Quality Modeling for PM2.5 Simulation, and Impact of Aerosol Direct Effect</p>
 
   <a href="../paper/Keynote - Dr. Kondo.pdf" class="pdf"><img src="../img/pdf_icon.gif">Keynote Abstract</a>
+
+  <div class="top"><a href="#top">top</a></div>
+  <div class="border"></div>
+  </div> <!-- End Keynote Info -->
+
+
+
+   <span class="anchor" id="Dr. Bernard H. Kueper"></span>
+  <div class="keynote-info">
+  <p class="bold">Dr. Bernard H. Kueper</p><img src="../img/Kueper.jpg" width="250" align="right" class="keynote-img">
+  <p class="body">Dr. Kueper is a professor in the Department of Civil Engineering at Queen’s University in Kingston, Ontario. His research focuses on the subsurface behaviour and remediation of non-aqueous phase liquids (NAPLs) such as chlorinated solvents, coal tar, creosote, PCB oils and fuels in both unconsolidated deposits such as sands and gravels, as well as fractured clay and rock. These compounds currently represent the most frequently detected groundwater contaminants throughout industrialized areas of the world. Current research is aimed at the development and evaluation of in-situ remediation technologies such as hydraulic displacement (HD), electrical resistance heating (ERH), thermal conductive heating (TCH), enhanced in-situ bioremediation (EISB), and in-situ chemical oxidation (ISCO).  Professor Kueper and his graduate students make use of high resolution numerical simulation using multiphase flow/reactive transport models, laboratory experimentation, and field experimentation in carrying out their research.  Professor Kueper is the lead editor of the book Chlorinated Solvent Source Zone Remediation published in 2014 by Springer Science + Business Media, LLC.</p>
+
+  <p class="keynote-topic"><b>Topic of Keynote:</b> Remediation of Organic Contaminants in Groundwater</p>
+
+  <a href="../paper/Keynote - Dr. Kueper.pdf" class="pdf"><img src="../img/pdf_icon.gif">Keynote Abstract</a>
 
   <div class="top"><a href="#top">top</a></div>
   <div class="border"></div>
