--- a/registration.html
+++ b/registration.html
@@ -9,10 +9,10 @@ keyword: environment conference, biofuels conference, desalination conference, w
   <div class="unit-spacer content">
     <p class="body">The registration fees for the 7<sup>th</sup> International Conference on Environmental Pollution and Remediation (ICEPR'17) are listed below. All prices are in Euros and VAT (Value Added Tax) included:</p>
 
-    <div class="mobile">
+ <div class="mobile">
     <table>
-    <tr>
-    <td class="date-title"><s>Early Bird Registration</s><br><strong>Extended Early Bird Registration</strong><br><s>Prior to March 1, 2017</s><br><b>March 15, 2017</b></td>  
+    <tbody><tr>
+        <td class="date-title"><s>Early Bird Registration</s><br><strong>Final Extended Early Bird Registration</strong><br><s>Prior to March 1, 2017</s><br><b>April 7, 2017</b></td>  
     </tr>
     <tr>
     <td class="imp-date"><p class="left">Students*:</p> <p class="right">€450</p></td>   
@@ -22,7 +22,7 @@ keyword: environment conference, biofuels conference, desalination conference, w
     </tr>
 
     <tr>
-    <td class="date-title">Regular Registration<!-- </s><div class="past-text">Extended Regular Registration</div><s> --><br>Prior to April 15, 2017<!-- </s><br>Prior to July 1, 2016 --></td>
+    <td class="date-title"><s>Regular Registration</s><div class="past-text">Final Extended Regular Registration</div><s><br>Prior to April 15, 2017</s><br>Prior to May 1, 2017</td>
     </tr>
     <tr>
     <td class="imp-date"><p class="left">Students:</p> <p class="right">€550</p></td>
@@ -32,7 +32,7 @@ keyword: environment conference, biofuels conference, desalination conference, w
     </tr>
 
     <tr>
-    <td class="date-title" rowspan="2">Late Registration<br>After April 15, 2017</td>
+    <td class="date-title" rowspan="2">Late Registration<br>After May 1, 2017</td>
     </tr>
     <tr>
     <td class="imp-date"><p class="left">Students:</p> <p class="right">€600</p></td>
@@ -53,13 +53,13 @@ keyword: environment conference, biofuels conference, desalination conference, w
     <tr>
     <td class="imp-date">€122</td>
     </tr>
-</table>
+</tbody></table>
 </div>
 
     <div class="desktop">
     <table>
-    <tr>
-    <th class="date-title" rowspan="2"><s>Early Bird Registration</s><br><div class="past-text">Extended Early Bird Registration</div><s>Prior to March 1, 2017</s><br><div class="past-text">March 15, 2017</div></th>
+    <tbody><tr>
+    <th class="date-title" rowspan="2"><s>Early Bird Registration</s><br><div class="past-text">Final Extended Early Bird Registration</div><s>Prior to March 1, 2017</s><br><div class="past-text">April 7, 2017</div></th>
     <td class="imp-date"><p class="left">Students*:</p> <p class="right">€450</p></td>
     </tr>
     <tr>
@@ -67,7 +67,7 @@ keyword: environment conference, biofuels conference, desalination conference, w
     </tr>
 
     <tr>
-    <th class="date-title" rowspan="2">Regular Registration<!-- </s><div class="past-text">Extended Regular Registration</div><s> --><br>Prior to April 15, 2017<!-- </s><br>Prior to July 1, 2016 --></th>
+    <th class="date-title" rowspan="2"><s>Regular Registration</s><div class="past-text">Final Extended Regular Registration</div><br><s>Prior to April 15, 2017</s><br>Prior to May 1, 2017</th>
     <td class="imp-date"><p class="left">Students:</p> <p class="right">€550</p></td>
     </tr>
     <tr>
@@ -75,7 +75,7 @@ keyword: environment conference, biofuels conference, desalination conference, w
     </tr>
 
     <tr>
-    <th class="date-title" rowspan="2">Late Registration<br>After April 15, 2017</th>
+    <th class="date-title" rowspan="2">Late Registration<br>After May 1, 2017</th>
     <td class="imp-date"><p class="left">Students:</p> <p class="right">€600</p></td>
     
 </tr>
@@ -86,11 +86,14 @@ keyword: environment conference, biofuels conference, desalination conference, w
     <th class="date-title" rowspan="1">Accompanying person(s)**</th>
     <td class="imp-date">€150 (<b>ONLY</b> includes lunches and coffee breaks)<br>Banquet Dinner or Closing ceremony on cruise tour <b>ONLY</b>: €50</td>  
 </tr>
-<tr>
+
+    <tr>
     <th class="date-title" rowspan="1">Workshop Registration***<br>Prior to May 1, 2017</th>
     <td class="imp-date">€122</td>
     </tr>
+</tbody>
 </table>
+
 </div>
 
 <p class="body">*Student Identification will be Required on Registration Desk.<br>
