--- a/keynote.html
+++ b/keynote.html
@@ -1,15 +1,15 @@
 ---
 layout: default
-title: ICEPR'17 - Keynote Speakers
+title: ICEPR'18 - Keynote Speakers
 meta: The keynote speakers of ICEPR
 keyword: environment conference, biofuels conference, desalination conference, wastewater conference, pollution conference, remediation conference, environmental engineering conference, environmental pollution conference, environmental remediation conference, environmental treatment conference, air pollution conference, water pollution conference, wasterwater pollution conference, soil pollution conference, environmental protection, environmental sustainability, environmental development, greenhouse, global warming, climate change, groudwater, oil spills, renewable energy, water treatment, soil treatment, wastewater treatment, environment, biofuels, desalination, wastewater, pollution, remediation, environmental engineering, environmental pollution, environmental remediation, environmental treatment, air pollution, water pollution, wasterwater pollution, soil pollution, environmental protection conference, environmental sustainability conference, environmental development conference, greenhouse conference, global warming conference, climate change conference, groudwater conference, oil spills conference, renewable energy conference, water treatment conference, soil treatment conference, wastewater treatment conference
 ---
 
 <div class="unit unit-s-1 unit-m-1-4-1 unit-l-1-4-1">
   <div class="unit-spacer content">
-    <!-- <p class="body">The keynote information for the 7<sup>th</sup> International Conference on Environmental Pollution and Remediation (ICEPR'17) will be announced soon. We appreciate your patience!</p> -->
+    <p class="body">The keynote information for the 8<sup>th</sup> International Conference on Environmental Pollution and Remediation (ICEPR'18) will be announced soon. We appreciate your patience!</p>
 
-    <p class="body">We are very happy to announce the following keynote speakers for the 7<sup>th</sup> International Conference on Environmental Pollution and Remediation (ICEPR'17):</p>
+    <!-- <p class="body">We are very happy to announce the following keynote speakers for the 8<sup>th</sup> International Conference on Environmental Pollution and Remediation (ICEPR'18):</p>
 
     <div class="keynotes">
     <div class="unit unit-s-1-1 unit-s-1-2 unit-m-1-2 unit-l-1-2">
@@ -25,9 +25,9 @@ keyword: environment conference, biofuels conference, desalination conference, w
            <p class="body">Queen’s University, Canada</p>
       </div>
     </div>
-    </div> <!-- End Keynotes -->
+    </div> --> <!-- End Keynotes -->
 
-  <span class="anchor" id="Dr. Akira Kondo"></span>
+  <!-- <span class="anchor" id="Dr. Akira Kondo"></span>
   <div class="keynote-info">
   <p class="bold">Dr. Akira Kondo</p><img src="../img/Kondo.jpg" width="250" align="right" class="keynote-img">
   <p class="body">I was graduated from Faculty Engineering, Osaka University in 1982 and from Graduated School of Engineering , Osaka University in 1984. After that, I had worked in Matsushita Electric Industry (Panasonic) for 5 years. From 1989, I has been working in Osaka University as an assistant professor, associated professor and professor. I received PhD in 1999 and its thesis is “Study on development of numerical simulation model in order to mitigate urban atmospheric environment”. I am researching on the environmental dynamics modeling in the wide ranges from global scale to indoor scale. Moreover I carried out the joint researches in South-East Asia; Nepal, Indonesia, Korea, China, Vietnam, and Thailand. Throughout these researches, I received the best paper award from The Society of Heating, Air Conditioning and Sanitary Engineering of Japan in 2010 and received the best paper award from the Society of Environmental Science of Japan in 2012 and received the best academic award from Atmospheric Environmental Society of Japan in 2015. I am the author of more than 80 peer-reviewed articles including articles written in Japanease, and 80 international conference papers with limited peer review.</p>
@@ -38,22 +38,9 @@ keyword: environment conference, biofuels conference, desalination conference, w
 
   <div class="top"><a href="#top">top</a></div>
   <div class="border"></div>
-  </div> <!-- End Keynote Info -->
+  </div>  --><!-- End Keynote Info -->
 
 
-
-   <span class="anchor" id="Dr. Bernard H. Kueper"></span>
-  <div class="keynote-info">
-  <p class="bold">Dr. Bernard H. Kueper</p><img src="../img/Kueper.jpg" width="250" align="right" class="keynote-img">
-  <p class="body">Dr. Kueper is a professor in the Department of Civil Engineering at Queen’s University in Kingston, Ontario. His research focuses on the subsurface behaviour and remediation of non-aqueous phase liquids (NAPLs) such as chlorinated solvents, coal tar, creosote, PCB oils and fuels in both unconsolidated deposits such as sands and gravels, as well as fractured clay and rock. These compounds currently represent the most frequently detected groundwater contaminants throughout industrialized areas of the world. Current research is aimed at the development and evaluation of in-situ remediation technologies such as hydraulic displacement (HD), electrical resistance heating (ERH), thermal conductive heating (TCH), enhanced in-situ bioremediation (EISB), and in-situ chemical oxidation (ISCO).  Professor Kueper and his graduate students make use of high resolution numerical simulation using multiphase flow/reactive transport models, laboratory experimentation, and field experimentation in carrying out their research.  Professor Kueper is the lead editor of the book Chlorinated Solvent Source Zone Remediation published in 2014 by Springer Science + Business Media, LLC.</p>
-
-  <p class="keynote-topic"><b>Topic of Keynote:</b> Remediation of Organic Contaminants in Groundwater</p>
-
-  <a href="../paper/Keynote - Dr. Kueper.pdf" class="pdf"><img src="../img/pdf_icon.gif">Keynote Abstract</a>
-
-  <div class="top"><a href="#top">top</a></div>
-  <div class="border"></div>
-  </div> <!-- End Keynote Info -->
   
   </div>
   </div>
