--- a/venue.html
+++ b/venue.html
@@ -1,15 +1,15 @@
 ---
 layout: default
-title: ICEPR'17 - Conference Venue
+title: ICEPR'18 - Conference Venue
 meta: The conference venuw of ICEPR
 keyword: environment conference, biofuels conference, desalination conference, wastewater conference, pollution conference, remediation conference, environmental engineering conference, environmental pollution conference, environmental remediation conference, environmental treatment conference, air pollution conference, water pollution conference, wasterwater pollution conference, soil pollution conference, environmental protection, environmental sustainability, environmental development, greenhouse, global warming, climate change, groudwater, oil spills, renewable energy, water treatment, soil treatment, wastewater treatment, environment, biofuels, desalination, wastewater, pollution, remediation, environmental engineering, environmental pollution, environmental remediation, environmental treatment, air pollution, water pollution, wasterwater pollution, soil pollution, environmental protection conference, environmental sustainability conference, environmental development conference, greenhouse conference, global warming conference, climate change conference, groudwater conference, oil spills conference, renewable energy conference, water treatment conference, soil treatment conference, wastewater treatment conference
 ---
 
 <div class="unit unit-s-1 unit-m-1-4-1 unit-l-1-4-1">
   <div class="unit-spacer content">
-  <!-- <p class="body">The venue of the conference will be announced shortly! Thank you for your patience.</p> -->
+  <p class="body">The venue of the conference will be announced shortly! Thank you for your patience.</p>
    
-<p class="body">We are pleased to announce that the 7<sup>th</sup> International Conference on Environmental Pollution and Remediation (ICEPR'17) will be held in Italy, Rome on June 6 - 8, 2017 at the Barceló Aran Mantegna.</p>
+<!-- <p class="body">We are pleased to announce that the 8<sup>th</sup> International Conference on Environmental Pollution and Remediation (ICEPR'18) will be held in Madrid, Spain on Auugust 19 - 21, 2018 at the Barceló Aran Mantegna.</p>
 
 <p class="body">The Barceló Aran Mantegna is located in EUR-Garbatella, Rome's business district, surrounded by green spaces and very close to the city's new exhibition centre, the Nuova Fiera di Roma. The hotel's location ensures that it is always peaceful, but it is also well-connected to the city centre and Fiumicino and Ciampino international airports. There is a bus stop nearby which links the hotel to the centre of Rome, as well as all kinds of shops, banks, restaurants, and cafés.</p>
 
@@ -17,11 +17,11 @@ keyword: environment conference, biofuels conference, desalination conference, w
 <br>
 <center><a href="https://www.barcelo.com/en-us/hotels/italy/rome/barcelo-aran-mantegna/" target="_blank" class="body-link"><img src="../img/Logo-Barcelo_BHR_pos.png"  width="50%"></a></center>
 <br>
-<p class="body">Rome, Italy’s capital, is a sprawling, cosmopolitan city with nearly 3,000 years of globally influential art, architecture and culture on display. Ancient ruins such as the Forum and the Colosseum evoke the power of the former Roman Empire. Vatican City, headquarters of the Roman Catholic Church, has St. Peter’s Basilica and the Vatican Museums, which house masterpieces such as Michelangelo’s Sistine Chapel frescoes.</p>
+<p class="body">Madrid, Spain’s capital, is a sprawling, cosmopolitan city with nearly 3,000 years of globally influential art, architecture and culture on display. Ancient ruins such as the Forum and the Colosseum evoke the power of the former Roman Empire. Vatican City, headquarters of the Roman Catholic Church, has St. Peter’s Basilica and the Vatican Museums, which house masterpieces such as Michelangelo’s Sistine Chapel frescoes.</p>
 
 <p class="body">Rome can be reached very easily via its airports (Leonardo da Vinci and Ciampino), by rail (the two large stations, Termini and Tiburtina), and even by sea (the ports of Ostia, Fiumicino and Civitavecchia). </p>
 
-<p class="body">For more information on Rome, please visit <b><i><a href="http://www.turismoroma.it" target="_blank" class="body-link">Turismoroma</a></i></b>, the city’s tourist portal.</p>
+<p class="body">For more information on Rome, please visit <b><i><a href="http://www.turismoroma.it" target="_blank" class="body-link">Turismoroma</a></i></b>, the city’s tourist portal.</p> -->
 
 
   </div>
