--- a/accommodation.html
+++ b/accommodation.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: ICEPR'17 - Accommodation
+title: ICEPR'18 - Accommodation
 meta: The list of hotels for ICEPR
 keyword: environment conference, biofuels conference, desalination conference, wastewater conference, pollution conference, remediation conference, environmental engineering conference, environmental pollution conference, environmental remediation conference, environmental treatment conference, air pollution conference, water pollution conference, wasterwater pollution conference, soil pollution conference, environmental protection, environmental sustainability, environmental development, greenhouse, global warming, climate change, groudwater, oil spills, renewable energy, water treatment, soil treatment, wastewater treatment, environment, biofuels, desalination, wastewater, pollution, remediation, environmental engineering, environmental pollution, environmental remediation, environmental treatment, air pollution, water pollution, wasterwater pollution, soil pollution, environmental protection conference, environmental sustainability conference, environmental development conference, greenhouse conference, global warming conference, climate change conference, groudwater conference, oil spills conference, renewable energy conference, water treatment conference, soil treatment conference, wastewater treatment conference
 ---
@@ -8,8 +8,8 @@ keyword: environment conference, biofuels conference, desalination conference, w
 <a id="top"></a>
 <div class="unit unit-s-1 unit-m-1-4-1 unit-l-1-4-1">
   <div class="unit-spacer content">
-  <!-- <p class="body">We will provide a list of nearby accommodations to the venue soon! Thank you for your patience.</p> -->
-    <p class="body">We are pleased to announce that the  7<sup>th</sup> International Conference on Environmental Pollution and Remediation (ICEPR'17) will be held at the Barceló Aran Mantegna Hotel. <!-- More importantly, we have collaborated with the hotel to offer our customers a reduced rate on the accommodations! Please click here for more information: Hotel Alimara Barcelona --></p>
+  <p class="body">We will provide a list of nearby accommodations to the venue soon! Thank you for your patience.</p>
+<!--     <p class="body">We are pleased to announce that the  8<sup>th</sup> International Conference on Environmental Pollution and Remediation (ICEPR'18) will be held at the Barceló Aran Mantegna Hotel. More importantly, we have collaborated with the hotel to offer our customers a reduced rate on the accommodations! Please click here for more information: Hotel Alimara Barcelona</p>
 
     <p class="body">A list of hotels within the walking distance from the conference venue is available below. <i>Please note that the reservations must be made individually directly by either phone or online at a specific hotel.</i> We suggest to make your reservations as early as possible to get the best discount and to avoid any toursit rush.</p>
 
@@ -97,7 +97,7 @@ keyword: environment conference, biofuels conference, desalination conference, w
 <p class="body"><b>Address:</b> Via Andrea Mantegna, 130, 00147 Roma, Italy</p>
 
 <p class="body">For making reservations, please call: +39 06 989 521<br>
-<!-- <b>Group Discount:</b> Mention the conference to receive a Clarion discount. --></p>
+<b>Group Discount:</b> Mention the conference to receive a Clarion discount.</p>
 
 <p class="body">For more information regarding the hotel and reservations, please visit the link below:</p>
 
@@ -244,7 +244,7 @@ keyword: environment conference, biofuels conference, desalination conference, w
 <a href="http://www.hotelpyramid.it" class="body-link">www.hotelpyramid.it</a>
 
 <a href="#top" class="top">TOP</a>
-</div>
+</div> -->
 
   </div>
   </div>
