--- a/committee.html
+++ b/committee.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: ICEPR'17 - Scientific Committee
+title: ICEPR'18 - Scientific Committee
 meta: The scientific committee members of ICEPR
 keyword: environment conference, biofuels conference, desalination conference, wastewater conference, pollution conference, remediation conference, environmental engineering conference, environmental pollution conference, environmental remediation conference, environmental treatment conference, air pollution conference, water pollution conference, wasterwater pollution conference, soil pollution conference, environmental protection, environmental sustainability, environmental development, greenhouse, global warming, climate change, groudwater, oil spills, renewable energy, water treatment, soil treatment, wastewater treatment, environment, biofuels, desalination, wastewater, pollution, remediation, environmental engineering, environmental pollution, environmental remediation, environmental treatment, air pollution, water pollution, wasterwater pollution, soil pollution, environmental protection conference, environmental sustainability conference, environmental development conference, greenhouse conference, global warming conference, climate change conference, groudwater conference, oil spills conference, renewable energy conference, water treatment conference, soil treatment conference, wastewater treatment conference
 ---
@@ -9,7 +9,7 @@ keyword: environment conference, biofuels conference, desalination conference, w
   <div class="unit-spacer content">
     <p class="body">The Scientific Committee list is currently being updated. We appreciate your patience!</p>
 
-    <p class="bold">Scientific Committee Members:</p><br>
+    <!-- <p class="bold">Scientific Committee Members:</p><br>
 
     <p class="body"><b>Dr. Rajasekhar Bala, </b> National University of Singapore, Singapore</p>
     <p class="body"><b>Dr. Jamal Chaouki, </b> École Polytechnique de Montreal, Canada</p>
@@ -36,6 +36,6 @@ keyword: environment conference, biofuels conference, desalination conference, w
     <p class="body"><b>Dr. Olcay Tünay, </b> Istanbul Technical University, Turkey</p>
     <p class="body"><b>Dr. Jing Wang, </b> Swiss Federal Institute of Technology Zurich, Switzerland</p>
     <p class="body"><b>Dr. Chih-Huang Weng, </b> I-Shou University, Taiwan</p>
-    <p class="body"><b>Dr. Chunlong Zhang, </b> University of Houston-Clear Lake, USA</p>
+    <p class="body"><b>Dr. Chunlong Zhang, </b> University of Houston-Clear Lake, USA</p> -->
   </div>
   </div>
