--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 ---
 layout: default
-title: ICEPR'17 - 7th International Conference on Environmental Pollution and Remediation
+title: ICEPR'18 - 8th International Conference on Environmental Pollution and Remediation
 meta: A conference about environmental pollution and remediation. Great opportunity to network and gain more knowledge!
 keyword: environment conference, biofuels conference, desalination conference, wastewater conference, pollution conference, remediation conference, environmental engineering conference, environmental pollution conference, environmental remediation conference, environmental treatment conference, air pollution conference, water pollution conference, wasterwater pollution conference, soil pollution conference, environmental protection, environmental sustainability, environmental development, greenhouse, global warming, climate change, groudwater, oil spills, renewable energy, water treatment, soil treatment, wastewater treatment, environment, biofuels, desalination, wastewater, pollution, remediation, environmental engineering, environmental pollution, environmental remediation, environmental treatment, air pollution, water pollution, wasterwater pollution, soil pollution, environmental protection conference, environmental sustainability conference, environmental development conference, greenhouse conference, global warming conference, climate change conference, groudwater conference, oil spills conference, renewable energy conference, water treatment conference, soil treatment conference, wastewater treatment conference
 ---
 
 <div class="unit unit-s-1 unit-m-1-4-1 unit-l-1-4-1">
   <div class="unit-spacer content">
-    <p class="body">The 7<sup>th</sup> International Conference on Environmental Pollution and Remediation (ICEPR'17) aims to become the leading annual conference in fields related to environmental pollution and remediation. The goal of ICEPR'17 is to gather scholars from all over the world to present advances in the relevant fields and to foster an environment conducive to exchanging ideas and information. This conference will also provide an ideal environment to develop new collaborations and meet experts on the fundamentals, applications, and products of the mentioned fields.</p>
+    <p class="body">The 8<sup>th</sup> International Conference on Environmental Pollution and Remediation (ICEPR'18) aims to become the leading annual conference in fields related to environmental pollution and remediation. The goal of ICEPR'18 is to gather scholars from all over the world to present advances in the relevant fields and to foster an environment conducive to exchanging ideas and information. This conference will also provide an ideal environment to develop new collaborations and meet experts on the fundamentals, applications, and products of the mentioned fields.</p>
 
     <p class="body">All accepted and presented papers will be published in the conference proceedings, under an ISBN reference in a USB drive. The online version of the proceedings will also be published under an ISSN reference and each paper in the proceedings will be assigned unique DOIs by CrossRef. Furthermore, selected papers from the conference will be submitted for possible publication in the following journals from <a href="http://avestia.com/" class="body-link">Avestia Publishing</a> (publication fees may apply):</p>
 
@@ -15,31 +15,25 @@ keyword: environment conference, biofuels conference, desalination conference, w
 
 	<p class="body"><b>ICEPR</b> is an acronym for <b>I</b>nternational <b>C</b>onference on <b>E</b>nvironmental <b>P</b>ollution and <b>R</b>emediation.</p>
 
-	<p class="body">To view the website for the previous event in this conference series, please visit: <a href="http://2016.icepr.org" class="body-link mob-link">www.2016.icepr.org</a></p>
+	<p class="body">To view the website for the previous event in this conference series, please visit: <a href="http://2017.icepr.org" class="body-link mob-link">www.2017.icepr.org</a></p>
 
-  <h2>Keynote Speakers:</h2>
+<!--   <h2>Keynote Speakers:</h2>
     <center>
     <div class="unit unit-s-1-1 unit-m-1-2 unit-l-1-2 keynoteIndex">
       <img src="../img/Kondo.jpg" class="flex-img">
       <p class="body"><b>Dr. Akira Kondo,</b><br>Osaka University, Japan<br><a href="../keynote#Dr. Akira Kondo" class="body-link">Biography & Abstract</a></p>
    <br>
    </div>
-
-    <div class="unit unit-s-1-1 unit-m-1-4 unit-l-1-2 keynoteIndex">
-      <img src="../img/Kueper.jpg" class="flex-img">
-      <p class="body"><b>Dr. Bernard H. Kueper,</b><br>Queen’s University, Canada<br><a href="../keynote#Dr. Bernard H. Kueper" class="body-link">Biography & Abstract</a></p>
-    </div>
-  <br><br>
-  </center>
+  </center> -->
 
 	<div class="sponsor">
 	<a href="http://international-aset.com"><img src="../img/int-aset.svg" class="flex-sponsor1"></a><br>
 
 	<a href="http://avestia.com"><img src="../img/avestia.png" class="flex-sponsor"></a>
 
-  <a href="http://esemag.com"><img src="../img/esemag.jpg" class="flex-sponsor"></a>
+  <!-- <a href="http://esemag.com"><img src="../img/esemag.jpg" class="flex-sponsor"></a>
 
-  <a href="http://industryarc.com/about-us.php"><img src="../img/industryarc.jpg" class="flex-sponsor"></a>
+  <a href="http://industryarc.com/about-us.php"><img src="../img/industryarc.jpg" class="flex-sponsor"></a> -->
 	</div>
 
   </div>
