--- a/papers.html
+++ b/papers.html
@@ -1,13 +1,13 @@
 ---
 layout: default
-title: ICEPR'17 - Paper Submission
+title: ICEPR'18 - Paper Submission
 meta: The paper submission details and instructions for ICEPR
 keyword: environment conference, biofuels conference, desalination conference, wastewater conference, pollution conference, remediation conference, environmental engineering conference, environmental pollution conference, environmental remediation conference, environmental treatment conference, air pollution conference, water pollution conference, wasterwater pollution conference, soil pollution conference, environmental protection, environmental sustainability, environmental development, greenhouse, global warming, climate change, groudwater, oil spills, renewable energy, water treatment, soil treatment, wastewater treatment, environment, biofuels, desalination, wastewater, pollution, remediation, environmental engineering, environmental pollution, environmental remediation, environmental treatment, air pollution, water pollution, wasterwater pollution, soil pollution, environmental protection conference, environmental sustainability conference, environmental development conference, greenhouse conference, global warming conference, climate change conference, groudwater conference, oil spills conference, renewable energy conference, water treatment conference, soil treatment conference, wastewater treatment conference
 ---
 
 <div class="unit unit-s-1 unit-m-1-4-1 unit-l-1-4-1">
   <div class="unit-spacer content">
-    <p class="body">ICEPR'17 is now accepting papers on the following topics through its OpenConf system. If you have a paper on an additional topic, please write an email to <a href="mailto:info@icepr.org" class="body-link">info@icepr.org</a>. The current topics include but are not limited to:</p>
+    <p class="body">ICEPR'18 is now accepting papers on the following topics through its OpenConf system. If you have a paper on an additional topic, please write an email to <a href="mailto:info@icepr.org" class="body-link">info@icepr.org</a>. The current topics include but are not limited to:</p>
 
 <ul class="topics">
 <li>Air pollution and treatment</li>
@@ -32,7 +32,7 @@ keyword: environment conference, biofuels conference, desalination conference, w
 <li>Water Pollution and Treatment</li>
 </ul>
 
-    <p class="body">Manuscripts are invited for the 7<sup>th</sup> International Conference on Environmental Pollution and Remediation (ICEPR'17) on topics lying within the scope of the conference. All contributions must be original and should not have been published elsewhere.</p>
+    <p class="body">Manuscripts are invited for the 8<sup>th</sup> International Conference on Environmental Pollution and Remediation (ICEPR'18) on topics lying within the scope of the conference. All contributions must be original and should not have been published elsewhere.</p>
 
     <p class="body"><i>Three types of manuscripts</i> could be published in the conference proceedings:</p>
 
@@ -54,27 +54,27 @@ keyword: environment conference, biofuels conference, desalination conference, w
 
     <p class="body">Please note that a .docx template is available to guide the authors in formatting their papers. All papers (including extended abstracts) <b>must</b> comply with the template.</p>
 
-    <p class="body">You may find the conference template(s) for ICEPR'17 below:</p>
+    <p class="body">You may find the conference template(s) for ICEPR'18 below:</p>
 
     <p class="body"><b>Short and Full Papers'</b> Template:</p>
 
-	   <center><a href="../ICEPR17_Paper_Template.docx" class="body-link"><img src="../img/msword.png" onmouseover="this.src='../img/msword-hover.png'" onmouseout="this.src='../img/msword.png'" width="80px"><br>Paper Template (.DOCX)</a></center><br>
+	   <center><a href="../ICEPR18_Paper_Template.docx" class="body-link"><img src="../img/msword.png" onmouseover="this.src='../img/msword-hover.png'" onmouseout="this.src='../img/msword.png'" width="80px"><br>Paper Template (.DOCX)</a></center><br>
 
-       <center><a href="../ICEPR17_LaTeX_template.zip" class="body-link"><img src="../img/latex.png" onmouseover="this.src='../img/latex-hover.png'" onmouseout="this.src='../img/latex.png'" width="80px"><br>Paper Template (.zip)*</a></center><br>
+       <!-- <center><a href="../ICEPR18_LaTeX_template.zip" class="body-link"><img src="../img/latex.png" onmouseover="this.src='../img/latex-hover.png'" onmouseout="this.src='../img/latex.png'" width="80px"><br>Paper Template (.zip)*</a></center><br> -->
 
     <p class="body"><b>Extended Abstracts</b> Template:</p>
 
-		<center><a href="../ICEPR17_Extended_Abstract.docx" class="body-link"><img src="../img/msword.png" onmouseover="this.src='../img/msword-hover.png'" onmouseout="this.src='../img/msword.png'" width="80px"><br>Extended Abstract Template (.DOCX)</a></center><br>
+		<center><a href="../ICEPR18_Extended_Abstract.docx" class="body-link"><img src="../img/msword.png" onmouseover="this.src='../img/msword-hover.png'" onmouseout="this.src='../img/msword.png'" width="80px"><br>Extended Abstract Template (.DOCX)</a></center><br>
 
-        <center><a href="../ICEPR17_LaTeX_extended_abstract.zip" class="body-link"><img src="../img/latex.png" onmouseover="this.src='../img/latex-hover.png'" onmouseout="this.src='../img/latex.png'" width="80px"><br>Extended Abstract Template Template (.zip)*</a></center><br>
+        <!-- <center><a href="../ICEPR18_LaTeX_extended_abstract.zip" class="body-link"><img src="../img/latex.png" onmouseover="this.src='../img/latex-hover.png'" onmouseout="this.src='../img/latex.png'" width="80px"><br>Extended Abstract Template Template (.zip)*</a></center><br> -->
 
-    <p class="bold">*If you submit your camera-ready paper via LaTeX, we ask that you kindly consider the following:</p>
+    <!-- <p class="bold">*If you submit your camera-ready paper via LaTeX, we ask that you kindly consider the following:</p>
 
     <ol>
     <li>Within the .rar folder, we ask that you kindly send us ONLY the .tex files, figures and bibliographies</li>
     <li>Please send the PDF conversion in a SEPERATE attachment (please do not include it in the .rar folder)</li>
     <li>If you ever have any concerns, please use the .WORD template to ensure that your PDF generates an exact replica.</li>
-    </ol>
+    </ol> -->
 
     <p class="body">Papers should be prepared in English and carefully checked for correct grammar. Figures should be of high quality. To ensure high scientific quality, all papers will be reviewed by the Scientific Committee Members. All papers must be submitted in electronic form using the web site of the conference.</p>
 
@@ -84,7 +84,7 @@ keyword: environment conference, biofuels conference, desalination conference, w
 
     <p class="body">All papers must be presented by one of the authors. At least one author <b>must</b> register for the conference and pay the fee prior to Regular Registration deadline (see <a href="../dates" class="body-link">Important Dates</a>) in order for the paper to be published in the conference proceedings and accepted in the final program.</p>
 
-    <blockquote>Two best paper awards will be conferred to author(s) of the papers that receive the highest rank during the peer-review and by the respected session chairs. Only papers presented at the conference will be eligible for this award. Winners receive a certificate, 25% discount towards registration for the 2016 series of the conference, and can submit their papers to a related journal by Avestia Publishing for free publication (subject to a second round of peer-review).</blockquote>
+    <blockquote>Two best paper awards will be conferred to author(s) of the papers that receive the highest rank during the peer-review and by the respected session chairs. Only papers presented at the conference will be eligible for this award. Winners receive a certificate, 25% discount towards registration for the 2019 series of the conference, and can submit their papers to a related journal by Avestia Publishing for free publication (subject to a second round of peer-review).</blockquote>
    
    	<p class="bold">In order to submit your paper or access the reviewer system, please follow the link below:</p>
 
@@ -92,6 +92,6 @@ keyword: environment conference, biofuels conference, desalination conference, w
 
     <p class="body">The corresponding authors of accepted papers are <b>required</b> to please fill, complete, sign and send the following copyright form along with your Camera Ready Submission to <a href="mailto:info@icepr.org" class="body-link">info@icepr.org</a>. Failure to comply will result in removal of the paper from the proceedings.</p>
 
-	<center><a href="../ICEPR17_CopyrightForm.pdf" class="body-link"><img src="../img/pdf.png" width="80px"><br>Copyright Form</a></center>
+	<center><a href="../ICEPR18_CopyrightForm.pdf" class="body-link"><img src="../img/pdf.png" width="80px"><br>Copyright Form</a></center>
   </div>
   </div>
