--- a/paypal.html
+++ b/paypal.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: ICEPR'17 - PayPal
+title: ICEPR'18 - PayPal
 meta: The list of hotels for ICCPE
 keyword: environment conference, biofuels conference, desalination conference, wastewater conference, pollution conference, remediation conference, environmental engineering conference, environmental pollution conference, environmental remediation conference, environmental treatment conference, air pollution conference, water pollution conference, wasterwater pollution conference, soil pollution conference, environmental protection, environmental sustainability, environmental development, greenhouse, global warming, climate change, groudwater, oil spills, renewable energy, water treatment, soil treatment, wastewater treatment, environment, biofuels, desalination, wastewater, pollution, remediation, environmental engineering, environmental pollution, environmental remediation, environmental treatment, air pollution, water pollution, wasterwater pollution, soil pollution, environmental protection conference, environmental sustainability conference, environmental development conference, greenhouse conference, global warming conference, climate change conference, groudwater conference, oil spills conference, renewable energy conference, water treatment conference, soil treatment conference, wastewater treatment conference
 ---
@@ -16,12 +16,12 @@ keyword: environment conference, biofuels conference, desalination conference, w
 	<input type="hidden" name="hosted_button_id" value="XU4UQXRPLQGYC">
 	<table>
 	<tr><td><input type="hidden" name="on0" value="~ Select Registration Type ~">Select Registration Type</td></tr><tr><td><select name="os0">
-	<option value="Full Registration">Full Registration €750.00 EUR</option>
-	<option value="Student Registration">Student Registration €600.00 EUR</option>
-	<option value="Additional Paper">Additional Paper €150.00 EUR</option>
-	<option value="Accompanying Person">Accompanying Person €150.00 EUR</option>
-	<option value="Closing Ceremony">Closing Ceremony €70.00 EUR</option>
-	<option value="NewTech Workshop">NewTech Workshop €122.00 EUR</option>
+	<option value="Full Registration">Early Bird Full Registration €650.00 EUR</option>
+	 <option value="Student Registration">Early Bird Student Registration €450.00 EUR</option>
+	 <option value="Additional Paper">Additional Paper €150.00 EUR</option>
+	 <option value="Accompanying Person">Accompanying Person €150.00 EUR</option>
+	 <option value="Closing Ceremony">Closing Ceremony €70.00 EUR</option>
+	 <!-- <option value="NewTech Workshop">NewTech Workshop €122.00 EUR</option> -->
 	</select> </td></tr>
 	</table>
 	<input type="hidden" name="currency_code" value="EUR">
