--- a/program.html
+++ b/program.html
@@ -1,17 +1,17 @@
 ---
 layout: default
-title: ICEPR'17 - Conference Program
+title: ICEPR'18 - Conference Program
 meta: The conference program can be found here
 keyword: environment conference, biofuels conference, desalination conference, wastewater conference, pollution conference, remediation conference, environmental engineering conference, environmental pollution conference, environmental remediation conference, environmental treatment conference, air pollution conference, water pollution conference, wasterwater pollution conference, soil pollution conference, environmental protection, environmental sustainability, environmental development, greenhouse, global warming, climate change, groudwater, oil spills, renewable energy, water treatment, soil treatment, wastewater treatment, environment, biofuels, desalination, wastewater, pollution, remediation, environmental engineering, environmental pollution, environmental remediation, environmental treatment, air pollution, water pollution, wasterwater pollution, soil pollution, environmental protection conference, environmental sustainability conference, environmental development conference, greenhouse conference, global warming conference, climate change conference, groudwater conference, oil spills conference, renewable energy conference, water treatment conference, soil treatment conference, wastewater treatment conference
 ---
 
 <div class="unit unit-s-1 unit-m-1-4-1 unit-l-1-4-1">
   <div class="unit-spacer content">
-    <!-- <p class="body">The Conference Program for the 7<sup>th</sup> International Conference on Environmental Pollution and Remediation (ICEPR'17) will be available soon. We appreciate your patience!</p> -->
+    <p class="body">The Conference Program for the 8<sup>th</sup> International Conference on Environmental Pollution and Remediation (ICEPR'18) will be available soon. We appreciate your patience!</p>
 
-    <p class="body">The Conference Program for the 7<sup>th</sup> International Conference on Environmental Pollution and Remediation (ICEPR'17) is now available! Please follow the link below to access the program:</p>
+    <!-- <p class="body">The Conference Program for the 8<sup>th</sup> International Conference on Environmental Pollution and Remediation (ICEPR'18) is now available! Please follow the link below to access the program:</p> -->
 
-    <p align="center"><a href="../NewTech17_Program.pdf" class="body-link">NewTech17 Program</a></p> 
+    <!-- <p align="center"><a href="../NewTech18_Program.pdf" class="body-link">NewTech18 Program</a></p>  -->
 
   </div>
   </div>
