--- a/sponsor.html
+++ b/sponsor.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: ICEPR'17 - Sponsors
+title: ICEPR'18 - Sponsors
 meta: The list of hotels for ICEPR
 keyword: environment conference, biofuels conference, desalination conference, wastewater conference, pollution conference, remediation conference, environmental engineering conference, environmental pollution conference, environmental remediation conference, environmental treatment conference, air pollution conference, water pollution conference, wasterwater pollution conference, soil pollution conference, environmental protection, environmental sustainability, environmental development, greenhouse, global warming, climate change, groudwater, oil spills, renewable energy, water treatment, soil treatment, wastewater treatment, environment, biofuels, desalination, wastewater, pollution, remediation, environmental engineering, environmental pollution, environmental remediation, environmental treatment, air pollution, water pollution, wasterwater pollution, soil pollution, environmental protection conference, environmental sustainability conference, environmental development conference, greenhouse conference, global warming conference, climate change conference, groudwater conference, oil spills conference, renewable energy conference, water treatment conference, soil treatment conference, wastewater treatment conference
 ---
@@ -13,35 +13,54 @@ keyword: environment conference, biofuels conference, desalination conference, w
 
 		<a href="http://avestia.com"><img src="../img/avestia.png" class="flex-sponsor"></a>
 
-        <a href="http://esemag.com"><img src="../img/esemag.jpg" class="flex-sponsor"></a>
+        <!-- <a href="http://esemag.com"><img src="../img/esemag.jpg" class="flex-sponsor"></a>
 
-        <a href="http://industryarc.com/about-us.php"><img src="../img/industryarc.jpg" class="flex-sponsor"></a>
+        <a href="http://industryarc.com/about-us.php"><img src="../img/industryarc.jpg" class="flex-sponsor"></a> -->
 	</div>
 
-	<p class="body">There are currently three types of sponsorships available for ICEPR'17. The opportunities are as followed (prices are in Euros):</p>
+	<p class="body">There are currently three types of sponsorships available for ICEPR'18. The opportunities are as followed (prices are in Euros):</p>
 
-    <p class="body bold">Platinum Sponsorship, €3,500 (VAT included):</p>
-    	<ul>
-    		<li> 24" x 36" banner placed at the conference entrance section</li>
+    <p class="body bold">Platinum Sponsorship, €3,500:</p>
+        <ul>
             <li> Logo on the conference website </li>
             <li> Logo in the conference schedule booklet </li>
             <li> 4 free registrations for the personnel from the institute</li>
         </ul>
-   <p class="body bold">Gold Sponsorship, €2,700 (VAT included):</p>
-   		<ul>
+   <p class="body bold">Gold Sponsorship, €2,700:</p>
+        <ul>
             <li>Logo on the conference website </li>
-            <li>Logo in the conference schedule booklet </li
+            <li>Logo in the conference schedule booklet </li>
             <li>2 free registrations for the personnel from the institute</li>
         </ul>
-    <p class="body bold">Silver Sponsorship, €1,800 (VAT included):</p>
-    	<ul>
-           <li>Logo on the conference website </li>
-            <li>Logo in the conference schedule booklet </li>
-            <li>Logo on promotional material (such as pens) </li>
-            <li>1 free registration for the personnel from the institute</li>
+    <p class="body bold">Silver Sponsorship, €1,800:</p>
+        <ul>
+            <li>Logo on the conference website </li>
+            <li>2 free registrations for the personnel from the institute</li>
         </ul>
     <p class="body">If you are interested in sponsoring this event, please write an email to:</p>
 
 	<center><a href="mailto:sponsorship@international-aset.com" class="body-link">sponsorship@international-aset.com</a></center>
+
+    <br><br>
+
+    <h3>Exhibits</h3>
+    <p class="body">There are currently two types of opportunities for an exhibit at ICEPR. They are as followed (prices are in Euros):</p>
+      <p class="body bold">Table exhibit, €1500.00:</p>
+        <ul>
+            <li>A table setup for the entire duration of the conference</li>
+            <li>1 free registration for the personnel from the institute</li>
+            <li>An additional €300.00 for each accompanying person</li>
+        </ul>
+
+      <p class="body bold">Booth exhibit, €1500:</p>
+        <ul>
+            <li>A booth setup for 1 conference day</li>
+            <li>1 free registration for the personnel from the institute</li>
+            <li>An additional €300.00 for each accompanying person</li>
+        </ul>
+
+      <p class="body">The exhibit provides a platform for companies and institutions to present their products and distribute brochures and business cards. The exhibit also provides a unique networking opportunity with many experts and researchers in the field of multimedia and human computer interaction.</p>
+
+      <p class="body">If you are interested in an exhibit at ICEPR, please do not hesitate to contact us at <a href="mailto:info@icepr.org" class="body-link">info@icepr.org</a>.</p>
   </div>
 </div>
