--- a/symposium.html
+++ b/symposium.html
@@ -7,12 +7,23 @@ keyword: environment conference, biofuels conference, desalination conference, w
 
 <div class="unit unit-s-1 unit-m-1-4-1 unit-l-1-4-1">
   <div class="unit-spacer content">
-   <p class="body">The 7<sup>th</sup> International Conference on Environmental Pollution and Remediation (ICEPR'17) invites you to propose a symposium.</p>
+  	<h3>Symposium</h3>
+	   <p class="body">The 7<sup>th</sup> International Conference on Environmental Pollution and Remediation (ICEPR'17) invites you to propose a symposium.</p>
 
-   <p class="body">The proposed symposium, if accepted, will be co-located with and under the umbrella of the conference.</p>
+	   <p class="body">The proposed symposium, if accepted, will be co-located with and under the umbrella of the conference.</p>
 
-   <p class="body">Proposals by prospective chairs should be submitted to <a href="mailto:info@icepr.org" class="body-link">info@icepr.org</a> and will be evaluated by the Organizing and Scientific Committees. Upon approval, the Organizing Committee will disseminate the news through the conference website and call for papers. To obtain a high attendance, we kindly ask that the prospective chairs also publicize the event and personally contact researchers who they think will be interested to contribute. The minimum number of registered presenters for the event to take place is 7. Should attendance reach this minimum requirement, registration fees for the Chair will be waived.</p>
+	   <p class="body">Proposals by prospective chairs should be submitted to <a href="mailto:info@icepr.org" class="body-link">info@icepr.org</a> and will be evaluated by the Organizing and Scientific Committees. Upon approval, the Organizing Committee will disseminate the news through the conference website and call for papers. To obtain a high attendance, we kindly ask that the prospective chairs also publicize the event and personally contact researchers who they think will be interested to contribute. The minimum number of registered presenters for the event to take place is 7. Should attendance reach this minimum requirement, registration fees for the Chair will be waived.</p>
 
-   <p class="body">If you have any questions, please do not hesitate to contact us at <a href="mailto:info@icepr.org" class="body-link">info@icepr.org</a>.</p>
+	   <p class="body">If you have any questions, please do not hesitate to contact us at <a href="mailto:info@icepr.org" class="body-link">info@icepr.org</a>.</p>
+
+   <h3>Workshop</h3>
+      <p class="body">The 7<sup>th</sup> International Conference on Environmental Pollution and Remediation (ICEPR'17) invites you to propose a workshop.</p>
+
+      <p class="body">The proposed workshop, if accepted, will be co-located with and under the umbrella of the conference.</p>
+
+      <p class="body">Proposals by prospective chairs should be submitted to <a href="mailto:info@icepr.org" class="body-link">info@icepr.org</a> and will be evaluated by the Organizing and Scientific Committees. Upon approval, the Organizing Committee will disseminate the news through the conference website and call for papers. To obtain a high attendance, we kindly ask that the prospective chairs also publicize the event and personally contact researchers who they think will be interested to contribute. The minimum number of registered presenters for the event to take place is 7. Should attendance reach this minimum requirement, registration fees for the Chair will be waived.</p>
+
+      <p class="body">If you have any questions, please do not hesitate to contact us at <a href="mailto:info@icepr.org" class="body-link">info@icepr.org</a>.</p>
+
   </div>
   </div>
