added sc, flyers and keynotes

--- a/committee.html
+++ b/committee.html
@@ -11,8 +11,9 @@ keyword: environment conference, biofuels conference, desalination conference, w
 
     <p class="bold">Scientific Committee Members:</p><br>
 
-    <p class="body"><b>Dr. Maria Averina, </b> University Hospital of North Norway</p>
+   
     <p class="body"><b>Dr. Raid Amin, </b> University of West Florida, USA</p>
+    <p class="body"><b>Dr. Maria Averina, </b> University Hospital of North Norway</p>
     <!-- <p class="body"><b>Dr. Rajasekhar Bala, </b> National University of Singapore, Singapore</p> -->
     <p class="body"><b>Dr. Priscilla Boccia, </b> INAIL/DIT, Italy</p>
     <p class="body"><b>Dr. Jamal Chaouki, </b> École Polytechnique de Montreal, Canada</p>
@@ -36,6 +37,7 @@ keyword: environment conference, biofuels conference, desalination conference, w
     <!-- <p class="body"><b>Dr. Kuang-Hui Peng, </b> National Taipei University of Technology, Taiwan</p> -->
     <p class="body"><b>Dr. Tomasz Płociniczak, </b> University of Silesia, Poland</p>
     <p class="body"><b>Dr. Bertrand Pourrut, </b> Catholic University of Lille - Yncrea - ISA Lille, France</p>
+    <p class="body"><b>Dr. Corinne Rivasseau, </b> Commissariat à l’Energie Atomique et aux Energies Alternatives, France</p>
     <!-- <p class="body"><b>Dr. Martin Romantschuk, </b> University of Helsinki, Finland</p> -->
     <p class="body"><b>Dr. Nora Fung Yee Tam, </b> City University of Hong Kong, Hong Kong</p>
     <!-- <p class="body"><b>Dr. Ron Thring, </b> Univeristy of Northern British Columbia, Canada</p> -->
