--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@ keyword: environment conference, biofuels conference, desalination conference, w
 
 	<p class="body">To view the website for the previous event in this conference series, please visit: <a href="http://2017.icepr.org" class="body-link mob-link">www.2017.icepr.org</a></p>
 
-<!--   <h2>Keynote Speakers:</h2>
+  <h2>Keynote Speakers:</h2>
     <center>
     <div class="unit unit-s-1-1 unit-m-1-2 unit-l-1-2 keynoteIndex">
-      <img src="../img/Kondo.jpg" class="flex-img">
-      <p class="body"><b>Dr. Akira Kondo,</b><br>Osaka University, Japan<br><a href="../keynote#Dr. Akira Kondo" class="body-link">Biography & Abstract</a></p>
+      <img src="../img/Li.jpg" class="flex-img">
+      <p class="body"><b>Dr. Jianbing Li,</b><br>Univeristy of Northern British Columbia, Canada<br><!-- <a href="../keynote#Dr. Jianbing Li" class="body-link">Biography & Abstract</a> --></p>
    <br>
    </div>
-  </center> -->
+  </center>
 
 	<div class="sponsor">
 	<a href="http://international-aset.com"><img src="../img/int-aset.svg" class="flex-sponsor1"></a><br>
