--- a/keynote.html
+++ b/keynote.html
@@ -7,29 +7,29 @@ keyword: environment conference, biofuels conference, desalination conference, w
 
 <div class="unit unit-s-1 unit-m-1-4-1 unit-l-1-4-1">
   <div class="unit-spacer content">
-    <p class="body">The keynote information for the 8<sup>th</sup> International Conference on Environmental Pollution and Remediation (ICEPR'18) will be announced soon. We appreciate your patience!</p>
+    <!-- <p class="body">The keynote information for the 8<sup>th</sup> International Conference on Environmental Pollution and Remediation (ICEPR'18) will be announced soon. We appreciate your patience!</p> -->
 
-    <!-- <p class="body">We are very happy to announce the following keynote speakers for the 8<sup>th</sup> International Conference on Environmental Pollution and Remediation (ICEPR'18):</p>
+    <p class="body">We are very happy to announce the following keynote speaker for the 8<sup>th</sup> International Conference on Environmental Pollution and Remediation (ICEPR'18):</p>
 
     <div class="keynotes">
     <div class="unit unit-s-1-1 unit-s-1-2 unit-m-1-2 unit-l-1-2">
       <div class="unit-spacer">
-      <a href="#Dr. Akira Kondo">Dr. Akira Kondo</a><br>
-           <p class="body">Osaka University, Japan</p>
+      <!-- <a href="#Dr. Jianbing Li"> -->Dr. Jianbing Li<!-- </a> --><br>
+           <p class="body">Univeristy of Northern British Columbia, Canada</p>
       </div>
     </div>
 
-    <div class="unit unit-s-1-1 unit-s-1-2 unit-m-1-2 unit-l-1-2">
+   <!--  <div class="unit unit-s-1-1 unit-s-1-2 unit-m-1-2 unit-l-1-2">
       <div class="unit-spacer">
       <a href="#Dr. Bernard H. Kueper">Dr. Bernard H. Kueper</a><br>
            <p class="body">Queen’s University, Canada</p>
       </div>
-    </div>
-    </div> --> <!-- End Keynotes -->
+    </div> -->
+    </div> <!-- End Keynotes -->
 
-  <!-- <span class="anchor" id="Dr. Akira Kondo"></span>
+  <!-- <span class="anchor" id="Dr. Jianbing Li"></span>
   <div class="keynote-info">
-  <p class="bold">Dr. Akira Kondo</p><img src="../img/Kondo.jpg" width="250" align="right" class="keynote-img">
+  <p class="bold">Dr. Jianbing Li</p><img src="../img/Li.jpg" width="250" align="right" class="keynote-img">
   <p class="body">I was graduated from Faculty Engineering, Osaka University in 1982 and from Graduated School of Engineering , Osaka University in 1984. After that, I had worked in Matsushita Electric Industry (Panasonic) for 5 years. From 1989, I has been working in Osaka University as an assistant professor, associated professor and professor. I received PhD in 1999 and its thesis is “Study on development of numerical simulation model in order to mitigate urban atmospheric environment”. I am researching on the environmental dynamics modeling in the wide ranges from global scale to indoor scale. Moreover I carried out the joint researches in South-East Asia; Nepal, Indonesia, Korea, China, Vietnam, and Thailand. Throughout these researches, I received the best paper award from The Society of Heating, Air Conditioning and Sanitary Engineering of Japan in 2010 and received the best paper award from the Society of Environmental Science of Japan in 2012 and received the best academic award from Atmospheric Environmental Society of Japan in 2015. I am the author of more than 80 peer-reviewed articles including articles written in Japanease, and 80 international conference papers with limited peer review.</p>
 
   <p class="keynote-topic"><b>Topic of Keynote:</b> Performance of Meteorological and Air Quality Modeling for PM2.5 Simulation, and Impact of Aerosol Direct Effect</p>
@@ -38,7 +38,7 @@ keyword: environment conference, biofuels conference, desalination conference, w
 
   <div class="top"><a href="#top">top</a></div>
   <div class="border"></div>
-  </div>  --><!-- End Keynote Info -->
+  </div>  --> <!-- End Keynote Info-->
 
 
   
