changed proceeding note

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@ keyword: environment conference, biofuels conference, desalination conference, w
 
 <div class="unit unit-s-1 unit-m-1-4-1 unit-l-1-4-1">
   <div class="unit-spacer content">
+  
+      <p class="announcement-text" align="center" style="color:#009C4E"><strong>The conference proceedings of this conference will be indexed by Scopus and Google Scholar.</strong></p>
+
     <p class="body"><strong>The 8<sup>th</sup> International Conference on Environmental Pollution and Remediation (ICEPR'18) aims to become the leading annual conference in fields related to environmental pollution and remediation.</strong> The goal of ICEPR'18 is to gather scholars from all over the world to present advances in the relevant fields and to foster an environment conducive to exchanging ideas and information. This conference will also provide an ideal environment to develop new collaborations and meet experts on the fundamentals, applications, and products of the mentioned fields.</p>
 
     <p class="body"><b>ICEPR</b> is an acronym for <b>I</b>nternational <b>C</b>onference on <b>E</b>nvironmental <b>P</b>ollution and <b>R</b>emediation.</p>
