updated scientific committee

--- a/committee.html
+++ b/committee.html
@@ -9,42 +9,42 @@ keyword: environment conference, biofuels conference, desalination conference, w
   <div class="unit-spacer content">
     <p class="body">The Scientific Committee list is currently being updated. We appreciate your patience!</p>
 
-    <!--<p class="bold">Scientific Committee Members:</p><br>-->
+    <p class="bold">Scientific Committee Members:</p><br>
 
    
-    <!--<p class="body"><b>Dr. Raid Amin, </b> University of West Florida, USA</p>
-    <p class="body"><b>Dr. Maria Averina, </b> University Hospital of North Norway</p>
+    <p class="body"><b>Dr. Raid Amin, </b> University of West Florida, USA</p>
+    <!--<p class="body"><b>Dr. Maria Averina, </b> University Hospital of North Norway</p>
 -->    <!-- <p class="body"><b>Dr. Rajasekhar Bala, </b> National University of Singapore, Singapore</p> -->
-    <!--<p class="body"><b>Dr. Priscilla Boccia, </b> INAIL/DIT, Italy</p>
+    <p class="body"><b>Dr. Priscilla Boccia, </b> INAIL/DIT, Italy</p>
     <p class="body"><b>Dr. Jamal Chaouki, </b> École Polytechnique de Montreal, Canada</p>
-    <p class="body"><b>Dr. Bor-Yann Chen, </b> National I-Lan University, Taiwan</p>
-    <p class="body"><b>Dr. Chengci Chen, </b> Montana State University, USA</p>
+ <!--   <p class="body"><b>Dr. Bor-Yann Chen, </b> National I-Lan University, Taiwan</p>
+    <p class="body"><b>Dr. Chengci Chen, </b> Montana State University, USA</p>-->
     <p class="body"><b>Dr. Fabiana Corami, </b> CNR-IDPA, Italy</p>
     <p class="body"><b>Dr. Mamadou Fall, </b> University of Ottawa, Canada</p>
     <p class="body"><b>Dr. Anton Ficai, </b> University Politehnica of Bucharest, Romania</p>
     <p class="body"><b>Dr. Elisabetta Franchi, </b> Eni S.p.A., Italy</p>
     <p class="body"><b>Dr. Dragos Gudovan, </b> University Politehnica of Bucharest, Romania</p>
-    <p class="body"><b>Dr. Masayuki Goto, </b> Wayo Women's University, Japan</p>-->
+   <!-- <p class="body"><b>Dr. Masayuki Goto, </b> Wayo Women's University, Japan</p>-->
     <!-- <p class="body"><b>Dr. Ferri Hassani, </b> McGill University, Canada</p> -->
-   <!-- <p class="body"><b>Dr. Woo Seung Kim, </b> Hanyang University, South Korea</p>
+   <!-- <p class="body"><b>Dr. Woo Seung Kim, </b> Hanyang University, South Korea</p>-->
     <p class="body"><b>Dr. Kathlyn Kirkwood, </b> University of Ottawa, Canada</p>
     <p class="body"><b>Dr. Akira Kondo, </b> Osaka University, Japan</p>
-    <p class="body"><b>Dr. Bernie H. Kueper, </b> Queen’s University, Canada</p>
+ <!--   <p class="body"><b>Dr. Bernie H. Kueper, </b> Queen’s University, Canada</p>-->
     <p class="body"><b>Dr. Charles Lee, </b> The University of Newcastle, Singapore</p>
     <p class="body"><b>Dr. Jianbing Li, </b> Univeristy of Northern British Columbia, Canada</p>
     <p class="body"><b>Dr. Chuxia Lin, </b> University of Salford, UK</p>
-    <p class="body"><b>Dr. Huguette Turgeon O'Brien, </b> Laval University, Canada</p>-->
+    <p class="body"><b>Dr. Huguette Turgeon O'Brien, </b> Laval University, Canada</p>
     <!-- <p class="body"><b>Dr. Kuang-Hui Peng, </b> National Taipei University of Technology, Taiwan</p> -->
-   <!-- <p class="body"><b>Dr. Tomasz Płociniczak, </b> University of Silesia, Poland</p>
-    <p class="body"><b>Dr. Bertrand Pourrut, </b> Catholic University of Lille - Yncrea - ISA Lille, France</p>
-    <p class="body"><b>Dr. Corinne Rivasseau, </b> Commissariat à l’Energie Atomique et aux Energies Alternatives, France</p>-->
+    <p class="body"><b>Dr. Tomasz Płociniczak, </b> University of Silesia, Poland</p>
+    <!--<p class="body"><b>Dr. Bertrand Pourrut, </b> Catholic University of Lille - Yncrea - ISA Lille, France</p>-->
+    <p class="body"><b>Dr. Corinne Rivasseau, </b> Commissariat à l’Energie Atomique et aux Energies Alternatives, France</p>
     <!-- <p class="body"><b>Dr. Martin Romantschuk, </b> University of Helsinki, Finland</p> -->
   <!--  <p class="body"><b>Dr. Nora Fung Yee Tam, </b> City University of Hong Kong, Hong Kong</p>-->
     <!-- <p class="body"><b>Dr. Ron Thring, </b> Univeristy of Northern British Columbia, Canada</p> -->
-   <!-- <p class="body"><b>Dr. Marek Trojanowicz, </b> University of Warsaw, Poland</p>-->
+    <p class="body"><b>Dr. Marek Trojanowicz, </b> University of Warsaw, Poland</p>
     <!-- <p class="body"><b>Dr. Olcay Tünay, </b> Istanbul Technical University, Turkey</p> -->
     <!-- <p class="body"><b>Dr. Jing Wang, </b> Swiss Federal Institute of Technology Zurich, Switzerland</p> -->
-    <!--<p class="body"><b>Dr. Chih-Huang Weng, </b> I-Shou University, Taiwan</p>
-    <p class="body"><b>Dr. Chunlong Zhang, </b> University of Houston-Clear Lake, USA</p>-->
+    <p class="body"><b>Dr. Chih-Huang Weng, </b> I-Shou University, Taiwan</p>
+    <p class="body"><b>Dr. Chunlong Zhang, </b> University of Houston-Clear Lake, USA</p>
   </div>
   </div>
