--- a/committee.html
+++ b/committee.html
@@ -14,8 +14,9 @@ keyword: environment conference, biofuels conference, desalination conference, w
    
     <p class="body"><b>Dr. Raid Amin, </b> University of West Florida, USA</p>
     <!--<p class="body"><b>Dr. Maria Averina, </b> University Hospital of North Norway</p>
--->    <!-- <p class="body"><b>Dr. Rajasekhar Bala, </b> National University of Singapore, Singapore</p> -->
+-->  <p class="body"><b>Dr. Rajasekhar Bala, </b> National University of Singapore, Singapore</p> 
     <p class="body"><b>Dr. Priscilla Boccia, </b> INAIL/DIT, Italy</p>
+    <p class="body"><b>Dr. Monika Bojko, </b> Jagiellonian University, Poland</p>
     <p class="body"><b>Dr. Jamal Chaouki, </b> École Polytechnique de Montreal, Canada</p>
  <!--   <p class="body"><b>Dr. Bor-Yann Chen, </b> National I-Lan University, Taiwan</p>
     <p class="body"><b>Dr. Chengci Chen, </b> Montana State University, USA</p>-->
@@ -33,6 +34,7 @@ keyword: environment conference, biofuels conference, desalination conference, w
     <p class="body"><b>Dr. Charles Lee, </b> The University of Newcastle, Singapore</p>
     <p class="body"><b>Dr. Jianbing Li, </b> Univeristy of Northern British Columbia, Canada</p>
     <p class="body"><b>Dr. Chuxia Lin, </b> University of Salford, UK</p>
+    <p class="body"><b>Dr. Domenico Morabito, </b> University of Orléans, France</p>
     <p class="body"><b>Dr. Huguette Turgeon O'Brien, </b> Laval University, Canada</p>
     <!-- <p class="body"><b>Dr. Kuang-Hui Peng, </b> National Taipei University of Technology, Taiwan</p> -->
     <p class="body"><b>Dr. Tomasz Płociniczak, </b> University of Silesia, Poland</p>
@@ -40,7 +42,7 @@ keyword: environment conference, biofuels conference, desalination conference, w
     <p class="body"><b>Dr. Corinne Rivasseau, </b> Commissariat à l’Energie Atomique et aux Energies Alternatives, France</p>
     <!-- <p class="body"><b>Dr. Martin Romantschuk, </b> University of Helsinki, Finland</p> -->
   <!--  <p class="body"><b>Dr. Nora Fung Yee Tam, </b> City University of Hong Kong, Hong Kong</p>-->
-    <!-- <p class="body"><b>Dr. Ron Thring, </b> Univeristy of Northern British Columbia, Canada</p> -->
+     <p class="body"><b>Dr. Ron Thring, </b> Univeristy of Northern British Columbia, Canada</p> 
     <p class="body"><b>Dr. Marek Trojanowicz, </b> University of Warsaw, Poland</p>
     <!-- <p class="body"><b>Dr. Olcay Tünay, </b> Istanbul Technical University, Turkey</p> -->
     <!-- <p class="body"><b>Dr. Jing Wang, </b> Swiss Federal Institute of Technology Zurich, Switzerland</p> -->
