--- a/index.html
+++ b/index.html
@@ -49,17 +49,22 @@ keyword: environment conference, biofuels conference, desalination conference, w
 
       <h2>Keynote Speakers:</h2>
         <center>
-        <div class="unit unit-s-1-1 unit-m-1-2 unit-l-1-2 keynoteIndex">
-          <img src="../img/Fall.jpg" class="flex-img" alt="Dr. Mamadou Fall">
-          <p class="body"><b>Dr. Mamadou Fall,</b><br>University of Ottawa, Canada<a href="https://engineering.uottawa.ca/civil/people/fall-mamadou" class="body-link" target="_blank"><!-- Biography & Abstract --> View Profile</a></p>
-         <br>
-         </div>
 
-         <div class="unit unit-s-1-1 unit-m-1-2 unit-l-1-2 keynoteIndex">
+        <div class="unit unit-s-1-1 unit-m-1-2 unit-l-1-2 keynoteIndex">
           <img src="../img/Chaouki.jpg" class="flex-img" alt="Dr. Jamal Chaouki">
           <p class="body"><b>Dr. Jamal Chaouki,</b><br>École Polytechnique de Montréal, Canada<br><a href="../keynote#Dr. Chaouki" class="body-link">Biography & Abstract</a></p>
-         <br>
+          <br>
+        </div>
+
+
+        <div class="unit unit-s-1-1 unit-m-1-2 unit-l-1-2 keynoteIndex">
+          <img src="../img/Fall.jpg" class="flex-img" alt="Dr. Mamadou Fall">
+          <p class="body"><b>Dr. Mamadou Fall,</b><br>University of Ottawa, Canada<<br>
+            <a href="../keynote#Dr. Fall" class="body-link" target="_blank">Biography & Abstract</a></p>
+          <br>
          </div>
+
+         
       </center>
 
     <br>
