--- a/keynote.html
+++ b/keynote.html
@@ -12,17 +12,19 @@ keyword: environment conference, biofuels conference, desalination conference, w
   <p class="body">We are very happy to announce the following keynote speaker for the 9<sup>th</sup> International Conference on Environmental Pollution and Remediation (ICEPR'19):</p>
 
   <div class="keynotes">
-    <div class="unit unit-s-1-1 unit-s-1-2 unit-m-1-2 unit-l-1-2">
-      <div class="unit-spacer">
-      <a href="https://engineering.uottawa.ca/civil/people/fall-mamadou" target="_blank">Dr. Mamadou Fall</a><br> 
-           <p class="body">University of Ottawa, Canada</p>
-      </div>
-    </div>
+    
 
     <div class="unit unit-s-1-1 unit-s-1-2 unit-m-1-2 unit-l-1-2">
       <div class="unit-spacer">
       <a href="#Dr. Jamal Chaouki">Dr. Jamal Chaouki</a><br> 
            <p class="body">École Polytechnique de Montréal, Canada</p>
+      </div>
+    </div>
+
+    <div class="unit unit-s-1-1 unit-s-1-2 unit-m-1-2 unit-l-1-2">
+      <div class="unit-spacer">
+      <a href="#Dr. Mamadou Fall">Dr. Mamadou Fall</a><br> 
+           <p class="body">University of Ottawa, Canada</p>
       </div>
     </div>
 
@@ -38,6 +40,25 @@ keyword: environment conference, biofuels conference, desalination conference, w
   <p class="keynote-topic"><b>Topic of Keynote:</b> Biomimetic Apply to Waste Recycling</p>
 
   <a href="../paper/Keynote - Dr.Chaouki.pdf" class="pdf"><img src="../img/pdf_icon.gif">Keynote Abstract</a>
+
+  <div class="top"><a href="#top">top</a></div>
+  <div class="border"></div> 
+  
+  </div> <!-- End Keynote Info-->
+
+
+
+  <span class="anchor" id="Dr. Mamadou Fall"></span>
+  <div class="keynote-info">
+  <p class="bold">Dr. Mamadou Fall</p><img src="../img/Fall.jpg" width="250" align="right" class="keynote-img">
+  <p class="body">Dr. Fall is a Full Professor in the Department of Civil Engineering at the University of Ottawa (Canada) and the Associate Chair of the Department of Civil Engineering. He was awarded a PhD excellence scholarship for his PhD studies in Germany. Subsequently, he was granted a postdoctoral fellowship by the German Research Foundation and coordinated the German Research Chair of Environmental Geosciences and Geotechnics.</p>
+  <p class="body">Dr. Fall and his team are performing leading edge research in the geotechnical and geoenvironmental fields in close collaboration with the industry, major federal and provincial governmental institutions, and international partners. Dr. Fall has been leading several major research projects that are related to mine waste management, underground disposal of nuclear wastes, geological sequestration of carbon dioxide, landslides, geotechnical hazards induced by problem grounds and engineered landfill technology. He is currently supervising a large research team of postdoctoral researchers and graduate students (PhD and Masters). </p>
+  <p class="body">Over the years, his research projects have obtained substantial funding from a number of agencies and private companies, and findings of his research group have been used and implemented by the industry, key federal and national agencies, and numerous institutions or organizations worldwide. These research findings and impacts have been recognized by several awards and distinctions as well as have been broadcasted by national and international televisions.</p>
+  <p class="body">He has been leading or involved in the organization of numerous workshops, seminars, and national and international conferences. He has been repeatedly invited as keynote speaker or lecturer and to participate at various expert committees. He regularly acts as a consultant as well as a reviewer for scientific committees, peer review journals, and funding agencies, at the national and international level. He is author or co-author of over 175 publications (e.g., in peer-reviewed journals, conference proceedings).</p>
+
+  <p class="keynote-topic"><b>Topic of Keynote:</b> Are Tailings Waste?</p>
+
+  <a href="../paper/Keynote - Dr.Fall.pdf" class="pdf"><img src="../img/pdf_icon.gif">Keynote Abstract</a>
 
   <div class="top"><a href="#top">top</a></div>
   <div class="border"></div> 
